--- a/public/style1/style.css
+++ b/public/style1/style.css
@@ -1,33 +1,59 @@
     body {}
     
     header {
-        background-color: grey;
+        background-color: black;
         display: flex;
         flex-direction: row;
+    }
+    
+    img {
+        width: 400px;
+        padding-bottom: 0PX;
+        margin-bottom: 0PX;
+        position: relative;
+        bottom: -20PX;
+    }
+    
+    #about>p {
+        width: 60%;
     }
     
     header div {
         display: flex;
         flex-direction: row;
-        color: red;
+        color: white;
         margin-left: 100px;
     }
     
-    dt {
-        background-color: red;
-        color: white;
+    .contacts {
+        display: block;
+        width: 50%;
+    }
+    
+    dl {
+        margin: 0;
         display: flex;
-        flex-direction: column;
-        position: absolute;
-        right: 100%;
-        margin-left: 0px;
+        background-color: rgb(0, 0, 0);
+        position: relative;
+        top: 150px;
+        left: 120px
+    }
+    
+    dt {
+        background-color: black;
+        color: white;
+        width: 160px;
     }
     
     dd {
         background-color: black;
         color: red;
-        display: flex;
-        flex-direction: column;
+        margin: 0;
+    }
+    
+    hgroup {
+        position: relative;
+        top: 120px;
     }
     
     a {
@@ -38,7 +64,7 @@
     .contacts {
         position: absolute;
         top: 0%;
-        right: 10%;
+        left: 50%;
     }
     
     section {
@@ -134,15 +160,15 @@
     }
     
     div[data-skill="5"]>span {
-        width: calc(50% - 2%);
+        width: calc(90% - 2%);
     }
     
     div[data-skill="3"]>span {
-        width: calc(30% - 2%);
+        width: calc(90% - 2%);
     }
     
     div[data-skill="1"]>span {
-        width: calc(15% - 2%);
+        width: calc(60% - 2%);
     }
     
     div[data-skill="9"]>span {
@@ -150,16 +176,23 @@
     }
     
     div[data-skill="5"]>span {
-        width: calc(50% - 2%);
+        width: calc(100% - 2%);
     }
     
     div[data-skill="7"]>span {
-        width: calc(70% - 2%);
+        width: calc(90% - 2%);
     }
     
     @media screen and (max-width:500px) {
         #contact {
             position: relative;
+            left: -140px;
+            bottom: 130px;
+            width: 100px;
+        }
+        img {
+            position: relative;
+            left: 80px;
         }
         header div {
             display: flex;
